/*
 * $Id: ChangeLog,v 1.2221 2004/02/04 01:15:12 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-03 19:46 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    - Removed redundant logic related to item.asBlock.value->pSelfBase

  /* This appears to fix a GPF trap which occasionaly triggered at some FWH apps. */

2004-02-03 17:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
    ! Fixed GPF trap in DblToDate()

2004-02-04 08:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rdd/dbcmd.c
     ! overlooked to remove hb_xfree( szFileName ) on function DBUSEAREA()

2004-02-04 08:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rdd/dbf1.c
   * source/rdd/dbcmd.c
     ! corrections to avoid possibility of GPF because hb_xfree() tries to
       release pOpenInfo->abName.

2004-02-03 14:14 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbgtwvt.h
    * Rearranged headers inclusion.

  * source/rtl/gtwvt/gtwvt.c
    * Corrected few NULL to 0 and removed unused variable.

2004-02-04 03:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/debug.c
    + add wrappers for :
      __VMSTKGLIST()
      __VMSTKGCOUNT()

2004-02-03 19:50 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   ! fix for duplicating trailing spaces in keys. It was possible to make
     a situation where key was stored with trailing space in duplicate
     part and even overwrite key buffer

  * xharbour/source/vm/fm.c
   * redundant initialization of static variables in hb_xinit() which
      cause problem when memory was allocated in C init procedures removed

  - xharbour/tests/ERRSYSW.prg
  + xharbour/tests/errsysw.prg
  - xharbour/tests/InitRun.prg
  + xharbour/tests/initrun.prg
  - xharbour/tests/wvtgui.PRG
  + xharbour/tests/wvtgui.prg