@@ -1,5 +1,5 @@
 #
-# $Id: makefile.vc,v 1.3 2003/09/12 20:50:51 paultucker Exp $
+# $Id: makefile.vc,v 1.4 2003/09/23 04:52:34 paultucker Exp $
 #
 
 !IF "$(OS)" == "Windows_NT"
@@ -53,13 +53,11 @@ LIB32_OBJS= \
 	"$(INTDIR)\ziparchive.obj" \
 	"$(INTDIR)\zipautobuffer.obj" \
 	"$(INTDIR)\zipcentraldir.obj" \
-	"$(INTDIR)\zipcollections.obj" \
 	"$(INTDIR)\zipcomp.obj" \
 	"$(INTDIR)\zipcompatibility.obj" \
 	"$(INTDIR)\zipexception.obj" \
 	"$(INTDIR)\zipfile.obj" \
 	"$(INTDIR)\zipfileheader.obj" \
-	"$(INTDIR)\zipinternalinfo.obj" \
 	"$(INTDIR)\zipmemfile.obj" \
 	"$(INTDIR)\zipnew.obj" \
 	"$(INTDIR)\zippathcomponent.obj" \
